--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -1,302 +1,249 @@
+@font-face {
+    font-family: 'Jost';
+    font-weight: 400;
+    font-style: normal;
+    font-display: block;
+    src: url('../font/Jost-400.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'Jost';
+    font-weight: 700;
+    font-style: normal;
+    font-display: block;
+    src: url('../font/Jost-700.woff2') format('woff2');
+}
+
 body {
   margin: 0;
   background-color: #fff;
-  font-family: Arial, sans-serif;
-  color: #222;
-}
-
-.container {
-  margin: 0 auto;
-  text-align: left;
-  width: 100%;
+  font-family: Jost, Futura, Arial, sans-serif;
+  color: #222222;
 }
 
 #main {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 80px 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  grid-template-areas:
+    'menu thumbnails'
+    'menu canvas';
+  max-height: 100vh;
 }
 
 a,
 a:link,
 a:visited {
-  color: #222;
+  color: #222222;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #000;
+  color: #000000;
+}
+
+#thumbnails {
+  grid-area: thumbnails;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  padding: 2px;
+  scrollbar-width: thin;
+  scrollbar-color: #000000 #ffffff;
+}
+
+#thumbnails::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #ffffff;
+}
+
+#thumbnails::-webkit-scrollbar-thumb {
+  background: #000000;
+}
+
+#thumbnails img {
+  margin-left: 1px;
+  margin-right: 1px;
+  border-radius: 2px;
+  max-height: 70px;
+}
+
+#thumbnails a.current,
+#thumbnails img:hover {
+  opacity: 0.5;
+}
+
+#canvas {
+  grid-area: canvas;
+  min-width: 0;
+  min-height: 0;
+  padding: 2px;
+}
+
+#canvas div {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+#canvas div:target {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+}
+
+#canvas img {
+  display: block;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: calc(100% - 13px);
+  margin: 0 auto;
+}
+
+#canvas video {
+  display: block;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: calc(100% - 13px);
+  margin: 0 auto;
+}
+
+#canvas span {
+  font-size: 12px;
+  font-variant-numeric: tabular-nums;
+  white-space: pre;
 }
 
 /* albums menu */
 
-.menu {
+#menu {
+  grid-area: menu;
   font-weight: normal;
   font-size: 13px;
+  max-height: 100vh;
+  overflow-y: auto;
   line-height: 1.4;
   display: flex;
   margin-left: 5px;
   flex-direction: column;
   justify-content: flex-start;
   white-space: nowrap;
+  scrollbar-width: thin;
+  scrollbar-color: #000000 #ffffff;
+
 }
 
-.menu ul {
-  padding-left: 0;
-  list-style-type: none;
+#menu::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #ffffff;
 }
 
-.menu ul ul {
-  padding-left: 14px;
+#menu::-webkit-scrollbar-thumb {
+  background: #000000;
 }
 
-.menu ul ul ul ul ul {
-  font-size: 12px;
-}
-
-.menu a,
-.menu a:link,
-.menu a:visited {
-  text-decoration: none;
-  display: block;
-  color: #333;
-}
-
-.menu a:hover,
-.menu .current > a {
-  color: #3993C2;
-}
-
-.menu .title {
-  font-size: 12px;
+#menu .title {
+  font-size: 15px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
+#menu ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+#menu ul ul {
+  padding-left: 14px;
+}
+
+#menu ul ul ul ul ul {
+  font-size: 12px;
+}
+
+#menu a,
+#menu a:link,
+#menu a:visited {
+  text-decoration: none;
+  text-overflow: ellipsis;
+  display: block;
+  color: #333333;
+  overflow: hidden;
+}
+
+#menu a:hover,
+#menu .current > a {
+  color: #3993C2;
+}
+
+@media (max-width: 500px) {
+  #main {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    grid-row-gap: 10px;
+    grid-template-areas:
+      'menu'
+      'thumbnails'
+      'canvas';
+  }
+  max-height: initial;
+}
+
 @media (pointer: coarse) {
-  .menu {
+  #menu {
     font-size: 20px;
     line-height: 1.5;
   }
 
-  .menu li {
+  #menu .title {
+    font-size: 22px;
+  }
+
+  #menu li {
     display: none;
   }
 
-  .menu li.current > ul > li, /* children */
-  .menu ul.current_siblings > li, /* siblings and self */
-  .menu li.current_ancestor { /* ancestors */
+  #menu li.current > ul > li, /* children */
+  #menu ul.current_siblings > li, /* siblings and self */
+  #menu li.current_ancestor { /* ancestors */
     display: list-item;
   }
 
-  .menu ul ul ul ul ul {
+  #menu ul ul ul ul ul {
     font-size: 18px;
   }
-
-  .menu .title {
-    font-size: 16px;
-  }
-}
-
-/* no js */
-
-#gallery > a {
-  display: inline-block;
-}
-
-#gallery > a > img {
-  padding: 5px;
-}
-
-/* galleria */
-#gallery {
-  line-height: 0;
-  flex: 1;
-  min-width: 250px;
-  clear: both;
-}
-
-#gallery video {
-  position: absolute;
-  top: 10%;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.galleria-container.galleria-theme-classic {
-  max-height: inherit;
-  background-color: #fff;
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails-container {
-  top: 1px;
-  bottom: auto;
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails-container,
-.galleria-container.galleria-theme-classic .galleria-thumb-nav-left,
-.galleria-container.galleria-theme-classic .galleria-thumb-nav-right,
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image {
-  height: 70px;
-}
-
-.galleria-container.galleria-theme-classic .galleria-stage {
-  top: 80px;
-  bottom: 17px;
-}
-
-.galleria-container.galleria-theme-classic .galleria-info {
-  top: initial;
-  bottom: 0px;
-  pointer-events: none;
-}
-
-.galleria-container.galleria-theme-classic .galleria-info-text {
-  display: block;
-  background-color: transparent;
-  padding: 0;
-}
-
-.galleria-container.galleria-theme-classic .galleria-info-description {
-  color: #222;
-  font-family: Arial, sans-serif;
-  font-size: 10px;
-  font-variant: normal;
-  font-style: normal;
-  font-variant-numeric: tabular-nums;
-  white-space: pre;
-}
-
-.galleria-container.galleria-theme-classic .galleria-loader {
-  width: 50px;
-  height: 50px;
-  top: calc(50% - 25px);
-  right: calc(50% - 25px);
-  background-image: url('../img/loader.svg');
-}
-
-@media (pointer: coarse) {
-  #gallery {
-    max-height: unset;
-  }
-
-  .galleria-container.galleria-theme-classic .galleria-thumbnails-container,
-  .galleria-container.galleria-theme-classic .galleria-thumb-nav-left,
-  .galleria-container.galleria-theme-classic .galleria-thumb-nav-right,
-  .galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image {
-    height: 45px;
-  }
-
-  .galleria-container.galleria-theme-classic .galleria-stage {
-    top: 55px;
-    bottom: 0;
-  }
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image {
-  margin: 0 3px 0 0;
-  border: none;
-  border-bottom: 3px solid #fff;
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image img {
-  opacity: .9 !important;
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image img:hover,
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image.active img {
-  opacity: 1 !important;
-}
-
-.galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image.active {
-  border-bottom: 3px solid #3993C2;
-}
-
-.galleria-container.galleria-theme-classic.notouch .galleria-thumb-nav-left:hover,
-.galleria-container.galleria-theme-classic.notouch .galleria-thumb-nav-right:hover {
-  background-color: transparent;
-}
-
-/* fullscreen icon */
-
-.icons {
-  bottom: 0;
-  right: 0;
-  padding: 3px;
-  z-index: 2;
-  position: absolute;
-  text-align: right;
-  background-color: transparent;
-  border-radius: 3px;
-  opacity: 0.6;
-}
-
-.icons:hover {
-  opacity: 0.9;
-}
-
-.icons a {
-  display: block;
-  cursor: pointer;
-  background-image: url('../img/fullscreen.svg');
-  background-repeat: no-repeat;
-  width: 15px;
-  height: 15px;
 }
 
 /* dark mode */
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #111;
-    color: #eee;
+    background-color: #111111;
+    color: #eeeeee;
   }
 
   a,
   a:link,
   a:visited {
-    color: #eee;
+    color: #eeeeee;
   }
 
   a:hover {
-    color: #fff;
+    color: #ffffff;
   }
 
-  .menu a,
-  .menu a:link,
-  .menu a:visited {
-    color: #eee;
+  #menu a,
+  #menu a:link,
+  #menu a:visited {
+    color: #eeeeee;
   }
 
-  .menu a:hover,
-  .menu .current > a {
-    color: #4af;
-  }
-
-  .galleria-container.galleria-theme-classic {
-    background-color: #111;
-  }
-
-  .galleria-container.galleria-theme-classic .galleria-info-description {
-    color: #eee;
-  }
-
-  .galleria-container.galleria-theme-classic .galleria-thumbnails .galleria-image {
-    border-bottom: 3px solid #111;
-  }
-
-  .galleria-theme-classic .galleria-thumb-nav-left,
-  .galleria-theme-classic .galleria-thumb-nav-right,
-  .galleria-theme-classic .galleria-info-link,
-  .galleria-theme-classic .galleria-info-close,
-  .galleria-theme-classic .galleria-image-nav-left,
-  .galleria-theme-classic .galleria-image-nav-right {
-    filter: invert(1) !important;
-  }
-
-  .galleria-container.galleria-theme-classic .galleria-loader {
-    filter: invert(1) !important;
-  }
-
-  .icons a {
-    filter: invert(1) !important;
+  #menu a:hover,
+  #menu .current > a {
+    color: #44aaff;
   }
 }
