Disable phone number detection
Image dates are detected as phone numbers.

--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -7,6 +7,7 @@
     <title>{{ album.gallery.title }}{% if source_dir != album.title|striptags %} - {{ album.title|striptags }}{% endif %}</title>
     <meta name="description" content="">
     <meta name="author" content="{{ album.author }}">
+    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{ theme.url }}/css/normalize.css">
     <link rel="stylesheet" href="{{ theme.url }}/css/style.css">
