--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -65,7 +65,10 @@
             </div>
           {% endfor %}
         </div>
+
+        <div id="fullscreen"></div>
       {% endif %}
+
     </div>
 
     <script>
@@ -140,6 +143,17 @@
         }
       }
 
+      function toggleFullscreen() {
+        // Toggle fullscreen for the canvas
+        if (document.fullscreenElement) {
+          document.exitFullscreen()
+        }
+        else {
+          const canvas = document.getElementById('canvas')
+          canvas.requestFullscreen({navigationUI: 'hide'})
+        }
+      }
+
       function keyHandler(event) {
         // Handle navigation by keys
         const callback = {
@@ -147,17 +161,20 @@
           'ArrowRight': rightHandler,
           'ArrowUp': upHandler,
           'ArrowDown': downHandler,
+          'f': toggleFullscreen,
         }[event.key]
         callback?.()
       }
 
       // Do not add handlers if there is no content
       const canvas = document.getElementById('canvas')
+      const fullscreen = document.getElementById('fullscreen')
       const first_entry = canvas.firstElementChild
       if (first_entry) {
         document.addEventListener('keydown', keyHandler)
         window.addEventListener('hashchange', highlightThumbnail)
         canvas.addEventListener('click', nextPrevious)
+        fullscreen.addEventListener('click', toggleFullscreen)
         if (!window.location.hash.slice(1)) {
           upHandler()
         }
