--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ theme.url }}/css/style.css">
   </head>
   <body>
-    <div id="main">
+    <div id="main"{% if not album.gallery.full_tree %} class="no_menu"{% endif %}>
       {% if album.gallery.full_tree %}
         <div id="menu">
           {% if album.gallery.title %}
