--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -1,27 +1,27 @@
 @font-face {
-    font-family: 'Jost';
-    font-weight: 400;
-    font-style: normal;
-    font-display: block;
-    src: url('../font/Jost-400.woff2') format('woff2');
+  font-family: 'Jost';
+  font-weight: 400;
+  font-style: normal;
+  font-display: block;
+  src: url('../font/Jost-400.woff2') format('woff2');
 }
 
 @font-face {
-    font-family: 'Jost';
-    font-weight: 700;
-    font-style: normal;
-    font-display: block;
-    src: url('../font/Jost-700.woff2') format('woff2');
+  font-family: 'Jost';
+  font-weight: 700;
+  font-style: normal;
+  font-display: block;
+  src: url('../font/Jost-700.woff2') format('woff2');
 }
 
 body {
-  margin: 0;
   background-color: #ffffff;
   font-family: Jost, Futura, Arial, sans-serif;
   color: #222222;
 }
 
 #main {
+  position: relative;
   display: grid;
   grid-template-columns: 200px 1fr;
   grid-template-rows: 80px 1fr;
@@ -250,16 +250,6 @@ body {
   body {
     background-color: #111111;
     color: #eeeeee;
-  }
-
-  a,
-  a:link,
-  a:visited {
-    color: #eeeeee;
-  }
-
-  a:hover {
-    color: #ffffff;
   }
 
   #menu a,
