--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -11,8 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ theme.url }}/css/normalize.css">
     <link rel="stylesheet" href="{{ theme.url }}/css/style.css">
+    {{ settings.head|default('') }}
   </head>
   <body>
+    {{ settings.body_prefix|default('') }}
     <div id="main"{% if not album.gallery.full_tree %} class="no_menu"{% endif %}>
       {% if album.gallery.full_tree %}
         <div id="menu">
@@ -78,6 +80,7 @@
 
       {% endif %}
     </div>
+    {{ settings.body_suffix|default('') }}
     <script src="{{ theme.url }}/js/gallery.js"></script>
   </body>
 </html>
