--- a/theme_153957/templates/menu.html
+++ b/theme_153957/templates/menu.html
@@ -3,14 +3,14 @@
     {% if album.breadcrumb|length == 0 %}
         class="current_siblings"
     {% else %}
-      {% for name, album_dict in albums.items() %}
+      {% for album_dict in albums.values() %}
         {% if album_dict.self == album %}
           class="current_siblings"
         {% endif %}
       {% endfor %}
     {% endif %}
   >
-    {% for name, album_dict in albums.items() %}
+    {% for album_dict in albums.values() %}
       {% with current_ancestor=(album.breadcrumb|length and depth < album.breadcrumb|length and album_dict.self.title == album.breadcrumb[depth][1]) %}
         <li class="album_title{% if album_dict.self == album %} current{% endif %}{% if current_ancestor %} current_ancestor{% endif %}">
           <a href="{{ album.path_to_root|urlencode }}{{ album_dict.self.path_from_root|urlencode }}">{{ album_dict.self.title }}</a>
