--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -1,4 +1,5 @@
 {% set source_dir = album.gallery.settings.source.split('/')[-1] %}
+{% set top_album = album.gallery.albums['.'] %}
 
 <!doctype html>
 <html lang="en">
@@ -15,15 +16,15 @@
   </head>
   <body>
     {{ settings.body_prefix|default('')|safe }}
-    <div id="main"{% if not album.gallery.full_tree %} class="no_menu"{% endif %}>
-      {% if album.gallery.full_tree %}
+    <div id="main"{% if not top_album.albums %} class="no_menu"{% endif %}>
+      {% if top_album.albums %}
         <div id="menu">
           {% if album.gallery.title %}
             <p class="title">
               <a href="{{ album.path_to_root }}">{{ album.gallery.title }}</a>
             </p>
           {% endif %}
-          {% with albums=album.gallery.full_tree, depth=0 %}
+          {% with menu_album=top_album, depth=0 %}
             {% include './menu.html' %}
           {% endwith %}
         </div>
