Reduce size of thumbnails on small screens

--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -217,6 +217,10 @@ body {
   #menu {
     max-height: initial;
   }
+
+  #thumbnails img {
+    max-height: 55px;
+  }
 }
 
 @media (pointer: coarse) {
