Provide browser with a hint of the image size

--- a/theme_153957/templates/base.html
+++ b/theme_153957/templates/base.html
@@ -54,6 +54,8 @@
                 <img
                   src="{{ media.dst_filename }}"
                   alt="{{ media.title or media.src_filename }}    {{ media_date }}"
+                  width="{{ media.size.width }}"
+                  height="{{ media.size.height }}"
                   loading="lazy"
                 >
               {%- elif media.type == "video" %}
