Revert "Provide browser with a hint of the image size"
This reverts commit 3efb7df6f63df673a22dbbf2bc78bf18cd0489aa.

--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -98,7 +98,7 @@ body {
 
 #canvas img {
   display: block;
-  object-fit: contain;
+  object-fit: cover;
   max-width: 100%;
   max-height: calc(100% - 13px);
   margin: 0 auto;
@@ -106,7 +106,7 @@ body {
 
 #canvas video {
   display: block;
-  object-fit: contain;
+  object-fit: cover;
   max-width: 100%;
   max-height: calc(100% - 13px);
   margin: 0 auto;
