--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -83,13 +83,13 @@ body {
   background-color: #ffffff;
 }
 
-#canvas div {
+#canvas > div {
   display: none;
   width: 0;
   height: 0;
 }
 
-#canvas div:target {
+#canvas > div:target {
   width: 100%;
   height: 100%;
   flex-direction: column;
